--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 
     <title>Stas Sribnyi | Front-End Engineer | Interactive Resume</title>
 
-
     <!-- External Styles -->
     <!-- Normalize -->
     <link
@@ -153,6 +152,10 @@
       defer
       src="https://unpkg.com/sweet-scroll@4.0.0/sweet-scroll.min.js"
     ></script>
+    <script
+      defer
+      src="https://unpkg.com/lozad@1.9.0/dist/lozad.min.js"
+    ></script>
 
     <!-- Main Script -->
     <script defer src="static/js/index.js" type="module"></script>
@@ -220,8 +223,9 @@
         <div class="section__content about__content">
           <figure class="about__details">
             <img
-              class="about__photo"
-              src="static/img/stassribnyi.jpg"
+              class="about__photo lozad"
+              data-src="static/img/stassribnyi.jpg"
+              src="static/img/placeholder.gif"
               alt="Stas Sribnyi"
             />
             <figcaption>
@@ -685,7 +689,12 @@
               <ul class="career__work-stages">
                 <li class="career__work-stage">
                   <figure class="career__company">
-                    <img src="static/img/career/innovecs.png" alt="Innovecs" />
+                    <img
+                      class="lozad"
+                      data-src="static/img/career/innovecs.png"
+                      src="static/img/placeholder.gif"
+                      alt="Innovecs"
+                    />
                     <figcaption>
                       <p class="career__company-name">Innovecs</p>
                       <p>Apr 2019 &mdash; Present</p>
@@ -719,7 +728,12 @@
                 </li>
                 <li class="career__work-stage">
                   <figure class="career__company">
-                    <img src="static/img/career/caspio.png" alt="Caspio" />
+                    <img
+                      class="lozad"
+                      data-src="static/img/career/caspio.png"
+                      src="static/img/placeholder.gif"
+                      alt="Caspio"
+                    />
                     <figcaption>
                       <p class="career__company-name">Caspio</p>
                       <p>Aug 2017 &mdash; Apr 2019</p>
@@ -768,7 +782,9 @@
                 <li class="career__work-stage">
                   <figure class="career__company">
                     <img
-                      src="static/img/career/altexsoft.png"
+                      class="lozad"
+                      data-src="static/img/career/altexsoft.png"
+                      src="static/img/placeholder.gif"
                       alt="AltexSoft"
                     />
                     <figcaption>
@@ -825,7 +841,9 @@
                 <li class="career__education-stage">
                   <figure class="career__institution">
                     <img
-                      src="static/img/career/krnu.png"
+                      class="lozad"
+                      data-src="static/img/career/krnu.png"
+                      src="static/img/placeholder.gif"
                       alt="Kremenchuk State Polytechnical University"
                     />
                     <figcaption>
@@ -847,7 +865,9 @@
                 <li class="career__education-stage">
                   <figure class="career__institution">
                     <img
-                      src="static/img/career/altexsoft-labs.png"
+                      class="lozad"
+                      data-src="static/img/career/altexsoft-labs.png"
+                      src="static/img/placeholder.gif"
                       alt="AltexSoft Labs"
                     />
                     <figcaption>
@@ -870,7 +890,9 @@
                 <li class="career__education-stage">
                   <figure class="career__institution">
                     <img
-                      src="static/img/career/krnu.png"
+                      class="lozad"
+                      data-src="static/img/career/krnu.png"
+                      src="static/img/placeholder.gif"
                       alt="Kremenchuk State Polytechnical University"
                     />
                     <figcaption>
@@ -913,7 +935,9 @@
                             href="https://www.linkedin.com/in/nickolay-sredin-518b2037/"
                           >
                             <img
-                              src="https://media.licdn.com/dms/image/C5603AQFcUct8hBOQDg/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=NjEpSGEARFYYaWdQRKkODzujSu-LA1OBgSCbacE4EBM"
+                              class="lozad"
+                              data-src="https://media.licdn.com/dms/image/C5603AQFcUct8hBOQDg/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=NjEpSGEARFYYaWdQRKkODzujSu-LA1OBgSCbacE4EBM"
+                              src="static/img/placeholder.gif"
                               alt="Nickolay Sredin"
                             />
                             <div>
@@ -938,7 +962,9 @@
                             href="https://www.linkedin.com/in/zakir-nuriev-8373b0a1/"
                           >
                             <img
-                              src="https://media.licdn.com/dms/image/C5603AQH7sdtTvuD1aA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=m670y2XNOp9cQirfewa-MvE402bO1FXHIJUI2YlTSCE"
+                              class="lozad"
+                              data-src="https://media.licdn.com/dms/image/C5603AQH7sdtTvuD1aA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=m670y2XNOp9cQirfewa-MvE402bO1FXHIJUI2YlTSCE"
+                              src="static/img/placeholder.gif"
                               alt="Zakir Nuriev"
                             />
                             <div>
@@ -965,7 +991,9 @@
                             href="https://www.linkedin.com/in/beata-dobosiewicz-a64802ba/"
                           >
                             <img
-                              src="https://media.licdn.com/dms/image/C5603AQHYkihRJfcanw/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=83RxCbS7XwADdEhKh_VMfjXoi0UPkKLjAHY7p7LR3h8"
+                              class="lozad"
+                              data-src="https://media.licdn.com/dms/image/C5603AQHYkihRJfcanw/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=83RxCbS7XwADdEhKh_VMfjXoi0UPkKLjAHY7p7LR3h8"
+                              src="static/img/placeholder.gif"
                               alt="Beata Dobosiewicz"
                             />
                             <div>
@@ -998,7 +1026,9 @@
                             href="https://www.linkedin.com/in/vgordiyenko/"
                           >
                             <img
-                              src="https://media.licdn.com/dms/image/C5603AQGc3qiNTPKNEA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=WdIjlf3uJw00ryTVsvZhnnECKq9dXeRUyzH0oyMux-s"
+                              class="lozad"
+                              data-src="https://media.licdn.com/dms/image/C5603AQGc3qiNTPKNEA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=WdIjlf3uJw00ryTVsvZhnnECKq9dXeRUyzH0oyMux-s"
+                              src="static/img/placeholder.gif"
                               alt="Vitaliy Gordiyenko"
                             />
                             <div>
@@ -1027,7 +1057,9 @@
                             href="https://www.linkedin.com/in/anton-vasko-b87088a2/"
                           >
                             <img
-                              src="https://media.licdn.com/dms/image/C4E03AQFqN5_DpUf49g/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=mGmTXv3TukTiVopZKlCtT07xT00p3GE2HQzqdkCM4wA"
+                              class="lozad"
+                              data-src="https://media.licdn.com/dms/image/C4E03AQFqN5_DpUf49g/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=mGmTXv3TukTiVopZKlCtT07xT00p3GE2HQzqdkCM4wA"
+                              src="static/img/placeholder.gif"
                               alt="Anton Vasko"
                             />
                             <div>
@@ -1059,9 +1091,8 @@
               <figure>
                 <picture>
                   <img
-                    class="projects__item-thumbnail"
                     sizes="(max-width: 1024px) 100vw, 1024px"
-                    srcset="
+                    data-srcset="
                       static/img/projects/canvas-practice_320.png   320w,
                       static/img/projects/canvas-practice_486.png   486w,
                       static/img/projects/canvas-practice_625.png   625w,
@@ -1069,7 +1100,9 @@
                       static/img/projects/canvas-practice_869.png   869w,
                       static/img/projects/canvas-practice_1024.png 1024w
                     "
-                    src="static/img/projects/canvas-practice_1024.png"
+                    data-src="static/img/projects/canvas-practice_1024.png"
+                    src="static/img/placeholder.gif"
+                    class="projects__item-thumbnail lozad"
                     alt="Canvas Practice"
                   />
                 </picture>
@@ -1099,13 +1132,14 @@
                 <picture>
                   <img
                     sizes="(max-width: 1024px) 100vw, 1024px"
-                    srcset="
+                    data-srcset="
                       static/img/projects/todo-list-react_320.png   320w,
                       static/img/projects/todo-list-react_896.png   896w,
                       static/img/projects/todo-list-react_1024.png 1024w
                     "
-                    src="static/img/projects/todo-list-react_1024.png"
-                    class="projects__item-thumbnail"
+                    data-src="static/img/projects/todo-list-react_1024.png"
+                    src="static/img/placeholder.gif"
+                    class="projects__item-thumbnail lozad"
                     alt="ToDo List React"
                   />
                 </picture>
@@ -1133,9 +1167,8 @@
               <figure>
                 <picture>
                   <img
-                    class="projects__item-thumbnail"
                     sizes="(max-width: 1024px) 100vw, 1024px"
-                    srcset="
+                    data-srcset="
                       static/img/projects/image-manager_320.png   320w,
                       static/img/projects/image-manager_518.png   486w,
                       static/img/projects/image-manager_665.png   625w,
@@ -1143,7 +1176,9 @@
                       static/img/projects/image-manager_921.png   869w,
                       static/img/projects/image-manager_1024.png 1024w
                     "
-                    src="static/img/projects/image-manager_1024.png"
+                    data-src="static/img/projects/image-manager_1024.png"
+                    src="static/img/placeholder.gif"
+                    class="projects__item-thumbnail lozad"
                     alt="Image Manager"
                   />
                 </picture>
@@ -1174,13 +1209,14 @@
                 <picture>
                   <img
                     sizes="(max-width: 1024px) 100vw, 1024px"
-                    srcset="
+                    data-srcset="
                       static/img/projects/magic-app-redux_320.png   320w,
                       static/img/projects/magic-app-redux_920.png   920w,
                       static/img/projects/magic-app-redux_1024.png 1024w
                     "
-                    src="static/img/projects/magic-app-redux_1024.png"
-                    class="projects__item-thumbnail"
+                    data-src="static/img/projects/magic-app-redux_1024.png"
+                    src="static/img/placeholder.gif"
+                    class="projects__item-thumbnail lozad"
                     alt="Magic App (Redux)"
                   />
                 </picture>
