--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <meta name="author" content="Stas Sribnyi" />
     <meta name="robots" content="index, follow" />
     <meta
@@ -101,42 +104,33 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
       rel="preload"
       as="style"
-      onload="this.onload = null;this.rel = 'stylesheet';"
     />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      />
-    </noscript>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
 
     <!-- Glide JS -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.3.0/css/glide.core.min.css"
       rel="preload"
       as="style"
-      onload="this.onload = null;this.rel = 'stylesheet';"
     />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.3.0/css/glide.core.min.css"
-      />
-    </noscript>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.3.0/css/glide.core.min.css"
+    />
 
     <!-- Roboto Condensed -->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,700&display=swap"
       rel="preload"
       as="style"
-      onload="this.onload = null;this.rel = 'stylesheet';"
     />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,700&display=swap"
-      />
-    </noscript>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,700&display=swap"
+    />
 
     <!-- General Styles -->
     <link rel="stylesheet" href="static/css/base.css" />
@@ -154,61 +148,52 @@
 
     <!-- Queries -->
     <link
-      onload="this.onload = null;this.rel = 'stylesheet';"
       media="screen and (min-width: 768px)"
       href="static/css/desktop.query.css"
       rel="preload"
       as="style"
     />
-    <noscript>
-      <link
-        media="screen and (min-width: 768px)"
-        href="static/css/desktop.query.css"
-        rel="stylesheet"
-      />
-    </noscript>
     <link
-      onload="this.onload = null;this.rel = 'stylesheet';"
+      media="screen and (min-width: 768px)"
+      href="static/css/desktop.query.css"
+      rel="stylesheet"
+    />
+
+    <link
       media="screen and (min-width: 481px) and (max-width: 768px)"
       href="static/css/tablet.query.css"
       rel="preload"
       as="style"
     />
-    <noscript>
-      <link
-        rel="stylesheet"
-        media="screen and (min-width: 481px) and (max-width: 768px)"
-        href="static/css/tablet.query.css"
-      />
-    </noscript>
     <link
-      onload="this.onload = null;this.rel = 'stylesheet';"
+      rel="stylesheet"
+      media="screen and (min-width: 481px) and (max-width: 768px)"
+      href="static/css/tablet.query.css"
+    />
+
+    <link
       media="screen and (min-width: 341px) and (max-width: 480px)"
       href="static/css/mobile.query.css"
       rel="preload"
       as="style"
     />
-    <noscript>
-      <link
-        rel="stylesheet"
-        media="screen and (min-width: 341px) and (max-width: 480px)"
-        href="static/css/mobile.query.css"
-      />
-    </noscript>
     <link
-      onload="this.onload = null;this.rel = 'stylesheet';"
+      rel="stylesheet"
+      media="screen and (min-width: 341px) and (max-width: 480px)"
+      href="static/css/mobile.query.css"
+    />
+
+    <link
       media="screen and (min-width: 320px) and (max-width: 340px)"
       href="static/css/small-mobile.query.css"
       rel="preload"
       as="style"
     />
-    <noscript>
-      <link
-        rel="stylesheet"
-        media="screen and (min-width: 320px) and (max-width: 340px)"
-        href="static/css/small-mobile.query.css"
-      />
-    </noscript>
+    <link
+      rel="stylesheet"
+      media="screen and (min-width: 320px) and (max-width: 340px)"
+      href="static/css/small-mobile.query.css"
+    />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -258,9 +243,10 @@
           </h1>
           <p>
             Nice to see you here. I am a skilled front-end engineer with more
-            than <span id="js--career-start">4</span> years of working experience both with front-end and back-end.
-            I develop single-page web applications using a variety of frameworks
-            such as React and Angular. I will be glad to collaborate with you.
+            than <span id="js--career-start">4</span> years of working
+            experience both with front-end and back-end. I develop single-page
+            web applications using a variety of frameworks such as React and
+            Angular. I will be glad to collaborate with you.
           </p>
           <blockquote class="welcome__cite">
             When it is obvious that the goals cannot be reached, don't adjust
